# PicoSdkStartTemplate

./: .gitmodules  CMakeLists.txt  README.md  main.c
.github/workflows/: build_cmake.yml
Sdk/: SdkConfig.cmake
Source/: CMakeLists.txt  main.c
Source/Led/: CMakeLists.txt  Led.c  Led.h
Sources/: main.c
